[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.3.1"
dotenv = "0.15.0"
eyre = "0.6.12"
itertools = "0.11.0"
serde = "1.0.188"
serde_json = "1.0.107"
bounded-vec-deque = "0.1.1"

futures = "0.3.5"
futures-util = "*"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
tokio-tungstenite = "*"
async-trait = "0.1.74"
rand = "0.8.5"

alloy = { version = "0.3.6", features = ["full", "rpc-types-trace"] }
alloy-rlp = "0.3.6"
alloy-contract = "0.3.6"

tower = "0.4.0"
mev-share-rpc-api = "=0.1.4"
jsonrpsee-http-client = "=0.20.0"
ethers-signers = "2.0"
ethers = "2.0"
ecdsa = "0.16.9"

eth-encode-packed = "0.1.0"
rlp = { version = "0.5", features = ["derive"] }

foundry-evm-mini = { git = "https://github.com/solidquant/foundry-evm-mini.git" }

revm = { version = "3", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee",
] }

csv = "1.2.2"
colored = "2.0.0"
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
indicatif = "0.17.5"

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm/", rev = "80c909d6f242886cb26e6103a01d1a4bf9468426" }

[profile.release]
codegen-units = 1
lto = "fat"
